Fix too wide container
The container width is currently 100vw. However, with horizontal padding
5vw, the whole container becomes 110vw, which is too wide. This causes
the elements in each floor to be incorrectly center-aligned.

--- a/memories/index.css
+++ b/memories/index.css
@@ -189,7 +189,7 @@ body {
     color:rgb(255, 50, 50);
 }
 .container {
-    width:100vw;
+    width:90vw;
     height:100vh;
     padding:5vh 5vw;
     background:rgba(230, 144, 45, 0.975);
